--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "mcp-bridge",
+  "name": "mcp-llm-bridge",
   "version": "1.0.0",
-  "description": "Proyecto MCP Bridge con integración Ollama y manejo de herramientas",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "start": "ts-node src/main.ts",
+    "test": "jest --runInBand",
+    "test:ollama": "jest tests/ollama.test.ts --runInBand",
+    "test:filesystem": "jest tests/mcp/filesystem.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:flux": "jest tests/mcp/flux.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:brave": "jest tests/mcp/brave.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:github": "jest tests/mcp/github.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:memory": "jest tests/mcp/memory.test.ts --runInBand --detectOpenHandles --forceExit",
+    "test:gmail-drive": "jest tests/mcp/gmail-drive.test.ts --runInBand --detectOpenHandles --forceExit",
+    "reset-ollama": "ts-node src/ollama-manager.ts"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.0.3",
+    "openai": "^4.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.0",
-    "@types/node-fetch": "^2.6.12",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  },
-  "type": "module",
-  "directories": {
-    "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/patruff/ollama-mcp-bridge.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/patruff/ollama-mcp-bridge/issues"
-  },
-  "homepage": "https://github.com/patruff/ollama-mcp-bridge#readme"
+    "@jest/globals": "^29.7.0",
+    "@types/chalk": "^0.4.31",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18.0.0",
+    "@types/node-fetch": "^2.6.9",
+    "@types/winston": "^2.4.4",
+    "jest": "^29.7.0",
+    "node-fetch": "^2.6.7",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  }
 }
